# secret-fuse

./: .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: pr-checks.yml  release.yml
docs/: architecture.md  security.md  usage.md
docs/superpowers/plans/: 2026-04-30-secret-fuse.md  2026-05-06-encrypted-cache.md
docs/superpowers/specs/: 2026-04-30-secret-fuse-design.md  2026-05-06-encrypted-cache-design.md
fixtures/: basic_config.yaml  inline_config.yaml
fixtures/templates/: test.env.tmpl
src/: cache_crypto.rs  config.rs  content_cache.rs  fs.rs  harden.rs  lib.rs  main.rs  resolver.rs  service.rs  template.rs
src/lock_watcher/: mac.rs  mod.rs
tests/: config_test.rs  fs_test.rs  lock_watcher_test.rs  resolver_test.rs  template_test.rs
