[package]
name = "secret-fuse"
version = "0.1.0"
edition = "2021"
description = "FUSE filesystem for rendering files with secrets from 1Password"

[dependencies]
fuser = "0.17"
minijinja = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
base64 = "0.22"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
dirs = "6"
thiserror = "2"
secrecy = "0.10"
zeroize = "1"
signal-hook = "0.4.4"
wait-timeout = "0.2.1"

[dev-dependencies]
tempfile = "3"
