[package]
name = "secret-fuse"
version = "0.1.0"
edition = "2024"
description = "FUSE filesystem for rendering files with secrets from 1Password"
license = "MIT"
authors = ["Stig Bakken <stig@stigbakken.com>"]
repository = "https://github.com/stigsb/secret-fuse"

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
dirs = "6"
env_logger = "0.11"
fuser = "0.17"
libc = "0.2"
log = "0.4"
minijinja = "2"
rand = "0.10"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
signal-hook = "0.4.4"
thiserror = "2"
toml = "1"
wait-timeout = "0.2.1"
zeroize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
oslog = "0.2"

[dev-dependencies]
tempfile = "3"
